--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Excursion App</title>
     <link type="text/css" rel="stylesheet" href="resources/css/style.css" />
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <div class="download"><a href="https://bj80nvfr72oc21ufkqnruqf5jrk6i5ng70ccrup8t0d61sqkla8g.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a></div>
+
+    <p><video autoplay loop src="resources/videos/excursion.mp4"></video></p>
+
+    <h2>Your personal travel guide</h2>
+
+    <p>Excursion remembers places you like, and recommends new points of interest around you.<br /><br />
+      <img src="resources/images/camp.jpg" alt="Campsite" /><br /><br />
+      <img src="resources/images/phone.png" alt="Phone" /></p>
+
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <div class="download"><a href="https://bj80nvfr72oc21ufkqnruqf5jrk6i5ng70ccrup8t0d61sqkla8g.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a></div>
+
+    <p class="copyright">© Excursion</p>
   </body>
 </html>
