--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>Excursion App</title>
     <link type="text/css" rel="stylesheet" href="resources/css/style.css" />
   </head>
+
   <body>
     <h1>Discover hidden places in the world around you</h1>
+
     <div class="download"><a href="https://bj80nvfr72oc21ufkqnruqf5jrk6i5ng70ccrup8t0d61sqkla8g.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a></div>
 
-    <p><video autoplay loop src="resources/videos/excursion.mp4"></video></p>
+    <video autoplay loop src="resources/videos/excursion.mp4"></video>
 
     <h2>Your personal travel guide</h2>
 
